# QR_gen

./: CMakeLists.txt
gui/: CMakeLists.txt  MyWindow.cpp  MyWindow.h
libmiddleware/: CMakeLists.txt  middleware.cpp  middleware.h
src/: CMakeLists.txt  main.cpp
